
Tue Oct  5 23:59:22 EST 1999
(Christian)

Give help on the command line more easily. iirc --help
is recommended by the GNU coding standards.

-------------------------------------------------------------------------------

Tue Oct  5 22:34:52 PDT 1999
(Mandrake)

added an option to never display tooltips if you're over the "root window" or
desktop.  very annoying if you use sloppyfocus extensively.

access it by using the rightmouse menu -> tooltip settings
uncheck the 2nd item.

-------------------------------------------------------------------------------

Wed Oct  6 00:01:40 PDT 1999
(Raster)

try committing again

-------------------------------------------------------------------------------

Wed Oct  6 11:11:19 PDT 1999
(Raster)

images for mousewheel added :)

-------------------------------------------------------------------------------

Wed Oct  6 12:07:04 PDT 1999
(Mandrake)

a couple of unused parameters should be fixed here (no more warnings I can see)

-------------------------------------------------------------------------------

Wed Oct  6 12:53:33 PDT 1999
(Raster)

fix keybidnigns_changed flag to work right...

-------------------------------------------------------------------------------

Wed Oct  6 14:22:23 PDT 1999
(Raster)

fix lowerign of desktop 0 bug :)

-------------------------------------------------------------------------------

Wed Oct  6 16:44:32 PDT 1999
(Mandrake)

minor change in config.c - if you can't find ROOT_IMAGE menustyle, go back to
default in dirscan menus.  Also changed the ROOT_IMAGE menustyle to 20 length
in brushed metal

-------------------------------------------------------------------------------

Wed Oct  6 17:38:58 PDT 1999
(Raster)

turn off draw queue for ipc imageclass draws...

-------------------------------------------------------------------------------

Wed Oct  6 20:31:02 PDT 1999
(Raster)

need to add nop ipc call - need it for syncing purposes.